...
    "emailinvalide": "Email invalide",
    "motdepassetropcourt": "Mot de passe trop court",
    "motdepasseconfirmationdifferent": "Mot de passe de confirmation différent",
    "bienvenue": "Bienvenue !",
    "verifierdansboiteemail": "Vérifier votre compte dans votre boite mail",
    "renvoyerunemail": "Renvoyer un email",
    "accueil": "Accueil",
    "compte": "Compte",
    "informationspersonnelles": "Informations personnelles",
    "modifier": "Modifier",
    "sedeconnecter": "Se déconnecter",
    "modifierprofil": "Modifier le profile",
    "modifiermotdepasse": "Modifier le mot de passe",
    "supprimerlecompte" : "Supprimer le compte",
...
