...
          child: Form(
            autovalidateMode: AutovalidateMode.always,
            child: ListView(padding: const EdgeInsets.all(18), shrinkWrap: true, children: [
              const SizedBox(height: 8),
              TextFormField(
                key: new Key('placeSearch'),
                decoration: const InputDecoration(labelText: 'Place', suffixIcon: Icon(Icons.search)),
                autocorrect: false,
                textInputAction: TextInputAction.next,
                onChanged: (value) {
                  setState(() {
                    place = value;
                  });
...
